--- a/Web_Developer_Portfolio/public/index.html
+++ b/Web_Developer_Portfolio/public/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-6 text-white">
        <div style="margin-top: 200px;">
-        <h1 class="mt-4">Teja swaroop Parisa</h1>
+        <h1 class="mt-4">Teja swaroop Reactjs developer</h1>
         <p>UI/UX Fullstak Developer</p>
         <a href="#" class="btn btn-warning">projects</a>
         <a href="resume.pdf" class="btn btn-light">Resume</a>
